--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -11,12 +11,12 @@
         android:id="@+id/edtTaskName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:hint="Task name"
         android:ellipsize="end"
+        android:hint="Task name"
+        android:padding="20dp"
         android:singleLine="true"
-        android:padding="10dp"
         android:textSize="28sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,16 +61,50 @@
         android:drawableStart="@drawable/ic_reminder_off"
         android:drawablePadding="15dp"
         android:hint="Notification off"
-        android:clickable="true"
-        android:focusable="true"
         android:padding="20sp"
         android:textSize="27sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtTaskName"
-        app:layout_constraintVertical_bias="0.051" />
+        app:layout_constraintTop_toBottomOf="@+id/edtTaskName" />
+
+    <TextView
+        android:id="@+id/tvCustomizeReminder"
+        android:layout_width="413dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="56dp"
+        android:text="Customize your notification"
+        android:textColor="@color/colorAccent"
+        android:textSize="27sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_notification_status" />
+
+    <TextView
+        android:id="@+id/tvReminder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:drawableStart="@drawable/ic_reminder"
+        android:drawablePadding="15dp"
+        android:hint="Remind me on..."
+        android:padding="20dp"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvCustomizeReminder" />
+
+
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/notification_group"
+        android:layout_width="wrap_content"
+        android:visibility="visible"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="tvReminder,tvCustomizeReminder" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
