--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,20 +13,21 @@
         <action
             android:id="@+id/action_mainFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
-        <action
-            android:id="@+id/action_mainFragment_to_detailFragment2"
-            app:destination="@id/detailFragment" />
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.ismail.todolist.DetailFragment"
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail" >
+
+        <argument
+            android:name="item"
+            app:argType="com.ismail.todolist.db.TodoItem"
+            app:nullable="true"
+            android:defaultValue="@null"/>
         <action
             android:id="@+id/action_detailFragment_to_mainFragment"
             app:destination="@id/mainFragment" />
-        <action
-            android:id="@+id/action_detailFragment_to_mainFragment2"
-            app:destination="@id/mainFragment" />
+
     </fragment>
 </navigation>
