--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -48,7 +48,7 @@
 
 
         <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/checkbox1"
+            android:id="@+id/doneCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
