--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -24,7 +24,8 @@
             android:name="item"
             app:argType="com.ismail.todolist.db.TodoItem"
             app:nullable="true"
-            android:defaultValue="@null"/>
+            android:defaultValue="@null"
+            />
         <action
             android:id="@+id/action_detailFragment_to_mainFragment"
             app:destination="@id/mainFragment" />
