--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -50,6 +50,8 @@
         <androidx.appcompat.widget.AppCompatCheckBox
             android:id="@+id/doneCheckBox"
             android:layout_width="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="30dp"
